--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ bcrypt==3.1.7
 beautifulsoup4==4.9.0
 
 bert-extractive-summarizer==0.4.0
-bleach==3.1.4
+bleach==3.1.0
 blis==0.4.1
 boto==2.49.0
 boto3==1.9.250
@@ -60,9 +60,11 @@ docutils==0.15.2
 dtale==1.7.9
 easydict==1.8
 efficientnet==1.1.0
-en-core-web-lg==2.2.5
 en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-2.2.5/en_core_web_md-2.2.5.tar.gz
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz
+en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-2.2.5/en_core_web_lg-2.2.5.tar.gz
+
+
 entrypoints==0.3
 falcon==2.0.0
 fasttext==0.9.2
@@ -293,7 +295,7 @@ tabulate==0.8.5
 tbb==2019.0
 tempdir==0.7.1
 tensorboard==2.1.1
-tensorflow==2.0.1
+tensorflow==2.0.0
 tensorflow-cpu==2.1.0
 tensorflow-estimator==2.1.0
 tensorflow-hub==0.7.0
@@ -323,7 +325,7 @@ umap-learn==0.3.10
 urllib3==1.24.3
 usaddress==0.5.10
 w3lib==1.21.0
-waitress==1.4.3
+waitress==1.3.1
 wasabi==0.6.0
 wcwidth==0.1.7
 webencodings==0.5.1
@@ -340,5 +342,6 @@ yagmail==0.11.220
 yapf==0.30.0
 zipp==0.6.0
 zope.interface==4.7.2
-Cython
-benepar
+
+benepar==0.1.2
+Cython==0.29.14
