--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+python3-dev
+libevent-dev
+
 absl-py==0.9.0
 address==0.1.1
 alembic==1.4.2
@@ -117,7 +120,7 @@ plotly==4.6.0
 plotly-express==0.4.1
 pluggy==0.13.0
 ply==3.11
-postal==1.1.8
+
 powerlaw==1.4.6
 preshed==3.0.2
 probableparsing==0.0.1
@@ -159,6 +162,7 @@ pytorch-transformers==1.2.0
 pytz==2019.2
 PyWavelets==1.1.1
 PyYAML==3.13
+
 pyzmq==18.1.0
 qgrid==1.3.1
 qtconsole==4.5.5
