--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ app/main/model/__pycache__/
 app/main/service/__pycache__/
 app/main/util/__pycache__/
 app/test/__pycache__/
+/.github/
+/.ipynb_checkpoints/
