--- a/requirements.txt
+++ b/requirements.txt
@@ -70,6 +70,7 @@ html2text==2020.1.16
 html5lib==1.0.1
 neuralcoref==4.0
 numpy==1.18.3
+nltk
 opencv-python==4.0.0.21
 opt-einsum==3.1.0
 ordered-set==3.1.1
