--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ docutils==0.15.2
 dtale==1.7.9
 easydict==1.8
 efficientnet==1.1.0
-en-core-web-lg@ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-2.2.5/en_core_web_lg-2.2.5.tar.gz
+en-core-web-sm@ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz
 entrypoints==0.3
 falcon==2.0.0
 fasttext==0.9.2
@@ -132,11 +132,6 @@ python-telegram-bot==12.2.0
 pytorch-pretrained-bert==0.6.2
 pytorch-transformers==1.2.0
 pytz==2019.2
-PyWavelets==1.1.1
-PyYAML==3.13
-pyzmq==18.1.0
-qgrid==1.3.1
-qtconsole==4.5.5
 queuelib==1.5.0
 rdflib==5.0.0
 regex==2017.4.5
@@ -147,12 +142,6 @@ rise==5.6.1
 rsa==4.0
 s3transfer==0.2.1
 sacremoses==0.0.35
-scikit-image==0.16.2
-scikit-learn==0.22.2.post1
-scikit-optimize==0.7.4
-scikit-video==1.1.11
-scipy==1.4.1
-Scrapy==2.0.1
 seaborn==0.9.0
 segtok==1.5.7
 Send2Trash==1.5.0
@@ -160,11 +149,9 @@ sentencepiece==0.1.83
 seqeval==0.0.12
 service-identity==18.1.0
 setuptools-git==1.2
-shap==0.34.0
 shutilwhich==1.1.0
 simplejson==3.17.0
 six==1.14.0
-sklearn==0.0
 smart-open==1.8.4
 soupsieve==1.9.4
 spacy==2.2.4
@@ -172,17 +159,13 @@ spacy-lookups-data==0.3.0
 spacy-stanza==0.2.1
 sqlitedict==1.6.0
 srsly==1.0.2
-stanfordcorenlp==3.9.1.1
-stanfordnlp==0.2.0
 stanza==1.0.1
-statsmodels==0.10.2
 street-address==0.4.0
 tabulate==0.8.5
 tbb==2019.0
 tempdir==0.7.1
 tensorboard==2.1.1
 tensorflow==2.0.0
-tensorflow-cpu==2.1.0
 tensorflow-estimator==2.1.0
 tensorflow-hub==0.7.0
 textblob==0.15.3
